--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "jstoxml": "^5.0.2",
+    "nodemon": "^3.0.1",
+    "xml-js": "^1.6.11"
   },
   "name": "web-scraper",
   "version": "1.0.0",
